delete field role from /register
