# room-booking-service/internal/controller/httpapi/dto/auth.go
@@ -5,7 +5,6 @@ import "time"
 type RegisterRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
-	Role     string `json:"role" binding:"required,oneof=admin user"`
 }
 
 type RegisterResponse struct {
